--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 name: "Stream mqtt from Enphase Envoy"
 description: "Converts Envoy Json to mqtt - V5 and v7 Envoy"
-version: "1.0.17"
+version: "1.0.18"
 slug: "envoy_to_mqtt_json"
 init: false
 arch:
@@ -15,7 +15,7 @@ options:
   MQTT_PASSWORD: mqtt.password
   MQTT_PORT: 1883
   MQTT_TOPIC: /envoy/json
-  ENVOY_HOST: envoy.local
+  ENVOY_HOST: 192.168.1.72
   ENVOY_USER: enter.enphase.userid@email.com
   ENVOY_USER_PASS: enter.enphase.password
   USE_FREEDS: True
